created form for users

--- a/dressapp/app/views/layouts/application.html.erb
+++ b/dressapp/app/views/layouts/application.html.erb
@@ -1,14 +1,31 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Dressapp</title>
-    <%= csrf_meta_tags %>
+<div id="container">
+<head>
+  <link href='http://fonts.googleapis.com/css?family=Bungee|Muli|Playfair+Display' rel='stylesheet' type='text/css'>
+  <link href="https://fonts.googleapis.com/css?family=Satisfy" rel="stylesheet">
+  <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
+  <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
+  <%= csrf_meta_tags %>
+  <title>DressApp</title>
+</head>
+<body id="body">
+  <div class = "menu-bar">
+      <span id = "logo">
+        <%= link_to image_tag("logo.png"), wardrobes_path %>
+      </span>
+      <span class = "userinfo">
+          <% if @current_user %>
+            <span id = "welcome-message"> Signed in as <%= link_to "#{current_user.name}", user_path(current_user) %></span> |
+            <span id = "log-out-button"><%= link_to "Log out", session_path("current"), :method => :delete %></span>
+          <% else %>
+            <span id = "log-in-button"><%= link_to "Log In", new_session_path %></span> |
+            <span id = "sign-up-button"><%= link_to "Sign Up", new_user_path %></span>
+          <% end %>
+      </span>
+  </div>
 
-    <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-    <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
-  </head>
-
-  <body>
-    <%= yield %>
-  </body>
+  </div>
+</body>
+</div>
 </html>
