--- a/dressapp/app/views/users/new.html.erb
+++ b/dressapp/app/views/users/new.html.erb
@@ -1,2 +1,8 @@
-<h1>Users#new</h1>
-<p>Find me in app/views/users/new.html.erb</p>
+<body class="sign-up">
+  <div class="sign-up-form">
+
+    <div class ="header">Sign Up Today!</div>
+    <%= render 'form' %>
+
+  </div>
+</body>
