--- a/dressapp/app/views/users/show.html.erb
+++ b/dressapp/app/views/users/show.html.erb
@@ -1,2 +1,14 @@
-<h1>Users#show</h1>
-<p>Find me in app/views/users/show.html.erb</p>
+
+    <%= image_tag "photo.jpg" %><br />
+    <h1><%= @user.name %></h1>
+    <div class="button"><%= link_to "Edit Profile", edit_user_path(@user) %>
+  </div>
+</div>
+
+
+<div class="info">
+  <h4>
+    E-mail: <%= @user.email %><br />
+    Photo: <%= @user.image %><br />
+  </h4>
+</div>
