--- a/dressapp/app/views/users/_form.html.erb
+++ b/dressapp/app/views/users/_form.html.erb
@@ -19,7 +19,7 @@
     <%= f.text_field :name %>
   </div>
   <div class="field">
-    <%= f.label :image %>
+    <%= f.label :"Profile photo" %>
     <%= f.text_field :image %>
   </div>
   <div class="field">
