--- a/dressapp/app/views/users/_form.html.erb
+++ b/dressapp/app/views/users/_form.html.erb
@@ -24,7 +24,7 @@
   </div>
   <div class="field">
     <%= f.label :email %>
-    <%= f.text_field :email %>
+    <%= f.file_field :email %>
   </div>
   <div class="field">
     <%= f.label :password %>
