changed choose photo for photo instead of email

--- a/dressapp/app/views/users/_form.html.erb
+++ b/dressapp/app/views/users/_form.html.erb
@@ -20,11 +20,11 @@
   </div>
   <div class="field">
     <%= f.label :"Profile photo" %>
-    <%= f.text_field :image %>
+    <%= f.file_field :image %>
   </div>
   <div class="field">
     <%= f.label :email %>
-    <%= f.file_field :email %>
+    <%= f.text_field :email %>
   </div>
   <div class="field">
     <%= f.label :password %>
