--- a/dressapp/app/views/users/show.html.erb
+++ b/dressapp/app/views/users/show.html.erb
@@ -1,6 +1,8 @@
 
     <%= image_tag "photo.jpg" %><br />
     <h1><%= @user.name %></h1>
+    <%= image_tag user.image.url %>
+
     <div class="button"><%= link_to "Edit Profile", edit_user_path(@user) %>
   </div>
 </div>
