--- a/dressapp/app/views/items/index.html.erb
+++ b/dressapp/app/views/items/index.html.erb
@@ -1,2 +1,13 @@
 <h1>Items#index</h1>
 <p>Find me in app/views/items/index.html.erb</p>
+
+<div>
+  <% @items.each do |item| %>
+    <ul>
+      <li><%= item.photo %></li>
+      <li><%= item.name %></li>
+      <li><%= item.description %></li>
+      <li><%= item.category %></li>
+    </ul>
+  <% end %>
+</div>
