--- a/dressapp/app/views/suitcases/index.html.erb
+++ b/dressapp/app/views/suitcases/index.html.erb
@@ -1,2 +1,11 @@
-<h1>Suitcases#index</h1>
-<p>Find me in app/views/suitcases/index.html.erb</p>
+<h1><%= @suitcase.name %></h1>
+
+<p>
+  <% @suitcase.each do |suitcase| %>
+    <ul>
+      <li><%= suitcase.description %></li>
+      <li>Duration: <%= suitcase.duration %> days</li>
+      <li>Destination: <%= suitcase.destination %></li>
+    </ul>
+  <% end %>
+</p>
