--- a/dressapp/app/views/suitcases/new.html.erb
+++ b/dressapp/app/views/suitcases/new.html.erb
@@ -1,2 +1,20 @@
-<h1>Suitcases#new</h1>
-<p>Find me in app/views/suitcases/new.html.erb</p>
+<h1>New Suitcase</h1>
+
+<%= form_for(@suitcase) do |f| %>
+  <p>
+    <%= f.label :name %><br>
+    <%= f.text_field :name %>
+  </p>
+  <p>
+    <%= f.label :description %><br>
+    <%= f.text_area :description %>
+  </p>
+  <p>
+    <%= f.label :duration %><br>
+    <%= f.number_field :duration %>
+  </p>
+  <p>
+    <%= f.label :destination %><br>
+    <%= f.text_field :destination %>
+  </p>
+<% end %>
