fixed bug with image category save:

--- a/dressapp/app/views/items/index.html.erb
+++ b/dressapp/app/views/items/index.html.erb
@@ -4,10 +4,10 @@
 <div>
   <% @items.each do |item| %>
     <ul>
-      <li><%= item.photo %></li>
+      <li><%#= image_tag item.image.url %></li>
       <li><%= item.name %></li>
       <li><%= item.description %></li>
-      <li><%= item.category %></li>
+      <li><%= item.category.category %></li>
     </ul>
   <% end %>
 </div>
