--- a/dressapp/app/views/items/_form.html.erb
+++ b/dressapp/app/views/items/_form.html.erb
@@ -29,7 +29,7 @@
 
   <div class="field">
     <%= f.label :category_id %>
-    <%= collection_select(:gallery, :category_id, Category.all, :id, :category ) %>
+    <%= collection_select(:item, :category_id, Category.all, :id, :category ) %>
   </div>
 
   <%= f.submit %>
