--- a/dressapp/app/views/suitcases/show.html.erb
+++ b/dressapp/app/views/suitcases/show.html.erb
@@ -1,2 +1,9 @@
-<h1>Suitcases#show</h1>
-<p>Find me in app/views/suitcases/show.html.erb</p>
+<h1><%= @suitcase.name %></h1>
+<ul>
+  <li><%= @suitcase.description %></li>
+  <li>Duration: <%= @suitcase.duration %> days</li>
+  <li>Destination: <%= @suitcase.destination %></li>
+</ul>
+<p><%= link_to 'Back', suitcases_url %></p>
+<p><%= link_to 'Edit Suitcase', edit_suitcase_url(@suitcase) %></p>
+<p><%= link_to 'Delete Suitcase', @suitcase, method: :delete, data: {confirm: "Are you sure?"} %></p>
