add link in wardrobe#show to add clothes, add link in wardrobe#index to wardrobe#new nad wardrobe#show

--- a/dressapp/app/views/items/_form.html.erb
+++ b/dressapp/app/views/items/_form.html.erb
@@ -32,6 +32,10 @@
     <%= collection_select(:item, :category_id, Category.all, :id, :category ) %>
   </div>
 
+  <div class="field">
+    <%= f.hidden_field :wardrobe_id %>
+  </div>
+
   <%= f.submit %>
 
 
