--- a/dressapp/app/views/items/index.html.erb
+++ b/dressapp/app/views/items/index.html.erb
@@ -4,11 +4,10 @@
 <div>
   <% @items.each do |item| %>
     <ul>
-      <li><%= image_tag item.image.url %></li>
+      <li><%= link_to image_tag(item.image.url), item_path(item) %></li>
       <li><%= item.name %></li>
       <li><%= item.description %></li>
       <li><%= item.category.category %></li>
-
     </ul>
   <% end %>
 </div>
