--- a/dressapp/app/views/users/show.html.erb
+++ b/dressapp/app/views/users/show.html.erb
@@ -18,7 +18,8 @@
 <h1>Welcome to your wardrobe</h1>
 <% if @user.wardrobes.empty? %>
 <h3>You don't have a wardrobe right now</h3>
-<%= link_to "Click here to create one",   @user_wardrobes_path %>
+<%= link_to "Create new one", new_wardrobe_path(:user => @user.id) %>
+
 <% else %>
 <% @user.wardrobes.each do |wardrobe| %>
 <%= wardrobe.name %>
@@ -27,18 +28,18 @@
 <% end %>
 
 
-<h1>Create a new wardrobe</h1>
+<!-- <h1>Create a new wardrobe</h1>
 
 
-<%= form_for wardrobe_url do |f| %>
+<#%= form_for wardrobe_url do |f| %>
 <div class="field">
-  <%= f.label :name %>
-  <%= f.text_field :name %>
+  <#%= f.label :name %>
+  <#%= f.text_field :name %>
 </div>
 
-<%= f.submit %>
+<#%= f.submit %>
 
-<% end %>
+<#% end %> -->
 
 
 <div class="wardrobelist">
